# uv-dependabot-tester

./: pyproject.toml  test_dummy.py
.github/: dependabot.yml
.github/workflows/: ci.yml
