[project]
name = "uv-dependabot-tester"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
network = [
    "httpx>=0.26",
]

[dependency-groups]
dev = [
    "pytest>=7",
]
jupyter = [
    "ipykernel>=6",
]
